[package]
name = "rustx"
version.workspace = true
license.workspace = true
edition.workspace = true

[features]

default = [
  #"rx-profile-no-std",
  #"rx-profile-std",
]


## ---------- ##

rx-crates-no-std = [
  "ahash",
  "anyhow",
  "backtrace",
  "base64",
  "bitflags",
  "blake3",
  "byteorder",
  "bytes",
  "cfg-if",
  "chrono",
  "crossbeam",
  "derive_more",
  "extension-trait",
  "futures",
  "hex",
  "itertools",
  "libc",
  "log",
  "nom",
  "num_enum",
  "once_cell",
  "rand",
  "rand_chacha",
  "rand_pcg",
  "serde",
  "serde_json",
  "sha2",
  "static_assertions",
  "toml",
]

rx-crates-std = [
  "rx-crates-no-std",
  "clap",
  "env_logger",
  "json5",
  "lazy_static",
  "num_cpus",
  "rayon",
  "regex",
  "tempfile",
  "tera",
  "thiserror",
  "toml",
  "unicode-segmentation",
  "walkdir",
  "xshell",
]

rx-crates-net = [
  "rx-crates-std",
  "http",
  "hyper",
  "hyper/full",
  "mime",
  "reqwest",
  "socket2",
  "tokio",
  "tokio/full",
  "url",
]

rx-crates-cli = [
  "rx-crates-std",
  "console",
  "dialoguer",
  "indicatif",
  "termcolor",
  "rustyline",
]

rx-crates-build-script = [
  "rx-crates-std",
  "cc",
  "cxx",
  "cxx-build",
]

rx-crates-proc-macro = [
  "rx-crates-std",
  "proc-macro2",
  "quote",
  "syn",
]


## ---------- ##


rx-profile-no-std = [
  "rx-rustlibs-no-std",
  "rx-feature-no-std",
  "rx-crates-no-std",
]

rx-profile-std = [
  "rx-rustlibs-std",
  "rx-feature-std",
  "rx-feature-default",
  "rx-crates-std",
]

rx-profile-net = [
  "rx-profile-std",
  "rx-crates-net",
]

rx-profile-cli = [
  "rx-profile-std",
  "rx-crates-cli",
]

rx-profile-build-script = [
  "rx-profile-std",
  "rx-crates-build-script",
]

rx-profile-proc-macro = [
  "rx-profile-std",
  "rx-rustlibs-proc-macro",
  "rx-crates-proc-macro",
]

rx-profile-full = [
  "rx-profile-std",
  "rx-profile-net",
  "rx-profile-cli",
  "rx-profile-build-script",
  "rx-profile-proc-macro",
]


## ---------- ##

rx-feature-no-std = [
  "ahash/compile-time-rng",
  "serde_json/alloc",
]

rx-feature-std = [
  "ahash/std",
  "anyhow/std",
  "backtrace/std",
  "base64/std",
  "bitflags/std",
  "blake3/std",
  "byteorder/std",
  "bytes/std",
  "chrono/std",
  "clap/std",
  "crossbeam/std",
  "cxx/std",
  "futures/std",
  "hex/std",
  "itertools/use_std",
  "libc/std",
  "log/std",
  "nom/std",
  "num_enum/std",
  "once_cell/std",
  "proc-macro2/proc-macro",
  "rand/std",
  "rand/std_rng",
  "rand_chacha/std",
  "regex/std",
  "quote/proc-macro",
  "serde/std",
  "serde_json/std",
  "sha2/std",
]

rx-feature-default = [
  "ahash/default",
  "chrono/clock", # can't use chrono/default because of RUSTSEC-2020-0071
  "clap/default",
  "console/default",
  "dialoguer/default",
  "futures/default",
  "indicatif/default",
  "nom/default",
  "proc-macro2/default",
  "quote/default",
  "regex/default",
  "reqwest/default",
  "rustyline/default",
  "serde/default",
  "serde_json/default",
  "sha2/default",
  "tera/default",
  "tokio/default",
  "toml/default",
  "url/default",
]

rx-feature-derive = [
  "clap/derive",
  "serde/derive",
]

rx-feature-serde = [
  "backtrace/serde",
  "bitflags/serde",
  "bytes/serde",
  "hex/serde",
  "log/serde",
  "rand/serde1",
  "rand_chacha/serde1",
  "rand_pcg/serde1",
  "url/serde",
]

rx-feature-backtrace = [
  "rx-feature-std",
  "anyhow/backtrace",
]

rx-feature-tokio = [
  "indicatif/tokio",
]

rx-feature-nightly = [
  "rand/nightly",
  "tempfile/nightly",
]


## ---------- ##


rx-rand-x-small_rng = [
  "rand/small_rng",
]

rx-serde-x-rc = [
  "serde/rc",
]


## ---------- ##


rx-rustlibs-no-std = [
  "rx-rustlib-core",
  "rx-rustlib-alloc",
]

rx-rustlibs-std = [
  "rx-rustlib-core",
  "rx-rustlib-alloc",
  "rx-rustlib-std",
]

rx-rustlibs-proc-macro = [
  "rx-rustlib-proc_macro",
]

rx-rustlib-core = []
rx-rustlib-alloc = []
rx-rustlib-std = []
rx-rustlib-proc_macro = []


## ---------- ##


anyhow = ["dep:anyhow"]
# todo



[dependencies]
ahash = { version = "0.8.3", optional = true, default-features = false }
anyhow = { version = "1.0.69", optional = true, default-features = false }
backtrace = {version = "0.3.67", optional = true, default-features = false }
base64 = { version = "0.21.0", optional = true, default-features = false }
bitflags = { version = "2", optional = true, default-features = false }
blake3 = { version = "1.3.3", optional = true, default-features = false }
byteorder = {version = "1.4.3", optional = true, default-features = false }
bytes = { version = "1.4.0", optional = true, default-features = false }
cc = { version = "1.0.79", optional = true, default-features = false }
cfg-if = { version = "1.0.0", optional = true, default-features = false }
chrono = { version = "0.4.23", optional = true, default-features = false }
clap = { version = "4.1.8", optional = true, default-features = false }
console = { version = "0.15.5", optional = true, default-features = false }
crossbeam = { version = "0.8.2", optional = true, default-features = false }
cxx = { version = "1.0.92", optional = true, default-features = false }
cxx-build = { version = "1.0.92", optional = true, default-features = false }
derive_more = { version = "0.99.17", optional = true, default-features = false }
dialoguer = { version = "0.10.4", optional = true, default-features = false }
env_logger = { version = "0.10.0", optional = true, default-features = false }
extension-trait = { version = "1.0.1", optional = true, default-features = false }
futures = { version = "0.3.26", optional = true, default-features = false }
http = { version = "0.2.9", optional = true, default-features = false }
hex = { version = "0.4.3", optional = true, default-features = false }
hyper = { version = "0.14.24", optional = true, default-features = false }
indicatif = { version = "0.17.3", optional = true, default-features = false }
itertools = { version = "0.10.5", optional = true, default-features = false }
json5 = { version ="0.4.1", optional = true, default-features = false }
lazy_static = { version = "1.4.0", optional = true, default-features = false }
libc = { version = "0.2.139", optional = true, default-features = false }
log = { version = "0.4.17", optional = true, default-features = false }
mime = { version = "0.3.16", optional = true, default-features = false }
nom = { version = "7.1.3", optional = true, default-features = false }
num_cpus = { version = "1.15.0", optional = true, default-features = false }
num_enum = { version = "0.6.1", optional = true, default-features = false }
once_cell = { version = "1.17.1", optional = true, default-features = false }
proc-macro2 = { version = "1.0.51", optional = true, default-features = false }
quote = { version = "1.0.23", optional = true, default-features = false }
rand = { version = "0.8.5", optional = true, default-features = false }
rand_chacha = { version = "0.3.1", optional = true, default-features = false }
rand_pcg = { version = "0.3.1", optional = true, default-features = false }
rayon = { version = "1.7.0", optional = true, default-features = false }
regex = { version = "1.7.1", optional = true, default-features = false }
reqwest = { version = "0.11.14", optional = true, default-features = false }
rustyline = { version = "11.0.0", optional = true, default-features = false }
serde = { version = "1.0.152", optional = true, default-features = false }
serde_json = { version = "1.0.94", optional = true, default-features = false }
sha2 = { version = "0.10.7", optional = true, default-features = false }
socket2 = { version = "0.5.1", optional = true, default-features = false }
static_assertions = { version = "1.1.0", optional = true, default-features = false }
syn = { version = "2.0.15", optional = true, default-features = false }
tempfile = { version = "3.4.0", optional = true, default-features = false }
tera = { version = "1.17.1", optional = true, default-features = false }
termcolor = { version = "1.2.0", optional = true, default-features = false }
thiserror = { version = "1.0.39", optional = true, default-features = false }
tokio = { version = "1.26.0", optional = true, default-features = false }
toml = { version = "0.7.2", optional = true, default-features = false }
unicode-segmentation = { version = "1.10.1", optional = true, default-features = false }
url = { version = "2.3.1", optional = true, default-features = false }
walkdir = { version = "2.3.2", optional = true, default-features = false }
xshell = { version = "0.2.3", optional = true, default-features = false }
